# sec-filings-app

./: .dockerignore  .env  .env.template  .gitignore  .gitlab-ci.yml  ARTICLE.MD  DIGITAL_OCEAN.md  LICENSE  RASPI.md  README.md  STRIPE.MD  STRIPE_DIAGRAM.MD  build_containers.sh  docker-compose.yml  raspi.yml  reset_local_data.sh  stack.yml
backend/: .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  .variables.template  my_project.dot  pyproject.toml  pytest.ini
backend/accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_customuser_stripe_customer_id.py  0003_customuser_subscription_valid_through.py  0004_auto_20201219_0414.py  0005_subscription_stripe_subscription_id.py  0006_auto_20201219_0615.py
backend/accounts/utils/social/: oauth.py
backend/backend/: __init__.py  celery_app.py  urls.py
backend/backend/settings/: base.py  development.py  gitlab_ci.py  production.py  pytest.py
backend/core/: admin.py  middleware.py  models.py  urls.py  views.py
backend/core/management/commands/: create_stripe_data.py  (+2 more)
backend/core/migrations/: 0001_initial.py
backend/docker/: Dockerfile.dev  Dockerfile.prod
backend/filing/: __init__.py  admin.py  apps.py  factory.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/filing/files/: sample01.txt  sample02.txt
backend/filing/migrations/: 0001_initial.py
backend/requirements/: base.txt  dev.txt  test.txt
backend/templates/: swagger-ui.html
(+77 files in other folders)
