[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Brian Caffey <briancaffey2010@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.9.5"

# Update to Django 3.2 requires additional changes
Django = "~3.1.5"
djangorestframework = "^3.12.4"
redis = "^3.5.3"
django-redis = "^5.0.0"
celery = "^5.1.1"
uritemplate = "^3.0.1"
coreapi = "^2.3.3"
PyYAML = "^5.4.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
requests = "^2.25.1"
social-auth-app-django = "^4.0.0"
social-auth-core = "^4.1.0"
stripe = "^2.58.0"


[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
factory-boy = "^3.2.0"
django-debug-toolbar = "^3.2.1"
django-extensions = "^3.1.3"
Werkzeug = "^2.0.1"
ipython = "^7.24.1"
# jupyter = "^1.0.0"





[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
